--- a/source/sass/blocks/label-feed.scss
+++ b/source/sass/blocks/label-feed.scss
@@ -15,8 +15,8 @@
   &--email {
     background-image: url("../img/form-email.svg");
     background-repeat: no-repeat;
-    background-position: center right 11px;
     width: 200px;
+    background-position: center right 11px;
 
     @media (min-width: variables.$tablet-width) {
       width: 100%;
@@ -27,8 +27,8 @@
   &--tel {
     background-image: url("../img/form-tel.svg");
     background-repeat: no-repeat;
-    background-position: center right 12px;
     width: 183px;
+    background-position: center right 12px;
 
     @media (min-width: variables.$tablet-width) {
       width: 100%;
@@ -38,6 +38,11 @@
 
   @media (min-width: variables.$tablet-width) {
     padding: 15px 40px 13px 20px;
+    background-position: center right 13px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-position: center right 15px;
   }
 }
 
